fix: right align grid element text on rtl

--- a/h5p-bildetema/src/components/TopicGridElement/TopicGridElement.module.scss
+++ b/h5p-bildetema/src/components/TopicGridElement/TopicGridElement.module.scss
@@ -27,6 +27,7 @@
 
   [class*="rtl"] & {
     direction: rtl;
+    text-align: right;
   }
 
   h2 {
